src/components/ProductCard/ProductCard.scss
@use "../../styles/variables" as *;

.product-card {
  width: 270px;
  height: 310px;
  border: solid 2px $color-secondary;
  text-decoration: none;
  color: inherit;
  .link-product {
    cursor: pointer;
    text-decoration: none;
    color: inherit;
  }
  .product-img {
    width: 100%;
    height: auto;
    border-bottom: solid 1px $color-secondary;
  }
  .product-name {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 3em;
    .name {
      text-align: center;
      font-weight: normal;
      font-size: 14px;
    }
  }
  .product-price {
    padding: 5px;
    font-weight: bold;
    font-size: 24px;
    text-align: start;
  }
  .product-btn {
    display: flex;
    justify-content: center;
    gap: 10px;
    .btn-cart {
      background-color: rgb(229, 229, 92);
      border: solid 2px rgb(161, 161, 59);
      padding: 3px;
      border-radius: 5px;
      cursor: pointer;
      &:active {
        transform: scale(0.9);
      }
    }

    .btn-buy {
      background-color: rgb(90, 200, 90);
      border: solid 2px green;
      padding: 3px;
      border-radius: 5px;
      cursor: pointer;
      &:active {
        transform: scale(0.9);
      }
    }
  }
  &:hover,
  &:active,
  &:focus {
    text-decoration: none;
    color: inherit;
  }
}

